Bootstrap 4 makes all buttons bigger so fixing alignment issues of 2px or so

--- a/css/global.css
+++ b/css/global.css
@@ -17,7 +17,6 @@ pre {
 /* Navbar styles */
 
 .navigation {
-  margin: 2px 0;
   line-height: 46px;
   height: 46px;
   display: flex;
