--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  height: calc(100% - 40px);
+  height: calc(100%-46px);
   padding: 0 10px;
 }
 
